--- a/index.html
+++ b/index.html
@@ -18,10 +18,12 @@
 </head>
 
 <body>
-  <header></header>
-  <main class="main">
+  <header>
+    <h1 class="text-center text-color">Springhawk Store</h1>
+  </header>
+  <main class=" main">
     <div class="search-field">
-      <div class="search-box">
+      <div class="search-box d-flex">
         <input id="input-field" class="search-field" type="text" />
         <button type="button" class="btn btn-primary search-button" data-toggle="button" aria-pressed="false"
           autocomplete="off" id="search-btn" onclick="loadProducts()">
@@ -32,7 +34,7 @@
     <div class="row">
       <div class="col-md-9 col-lg-9 col-sm-7">
         <div id="all-products" class="">
-          <h1></h1>
+          <!-- <h1></h1> -->
         </div>
       </div>
       <div class="col-md-3 col-lg-3 col-sm-5 cart-main">
@@ -50,7 +52,7 @@
             <tbody>
               <tr>
                 <th>Total Added-Products:</th>
-                <td>$ <span id="total-Products">0</span></td>
+                <td><span id="total-Products">0</span></td>
                 <td></td>
                 <td></td>
               </tr>
@@ -87,6 +89,9 @@
     </div>
   </main>
   <footer></footer>
+
+  <!-- fontawesome kit link  -->
+  <script src="https://kit.fontawesome.com/ebd146b81d.js" crossorigin="anonymous"></script>
 
   <!-- add javascript  file  -->
   <script src="./js/app.js"></script>
