--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Ranga Store</title>
+  <title>Springhawk Store</title>
   <link rel="stylesheet" href="./css/style.css" />
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
@@ -21,11 +21,11 @@
   <header>
     <h1 class="text-center text-color">Springhawk Store</h1>
   </header>
-  <main class=" main">
+  <main class="main">
     <div class="search-field">
-      <div class="search-box d-flex">
-        <input id="input-field" class="search-field" type="text" />
-        <button type="button" class="btn btn-primary search-button" data-toggle="button" aria-pressed="false"
+      <div class="search-box">
+        <input id="input-field" class="" type="text" />
+        <button type="button" class="search-button btn-primary-custom" data-toggle="button" aria-pressed="false"
           autocomplete="off" id="search-btn" onclick="loadProducts()">
           Search
         </button>
@@ -34,10 +34,9 @@
     <div class="row">
       <div class="col-md-9 col-lg-9 col-sm-7">
         <div id="all-products" class="">
-          <!-- <h1></h1> -->
         </div>
       </div>
-      <div class="col-md-3 col-lg-3 col-sm-5 cart-main">
+      <div class="col-md-3 col-lg-3 col-sm-5 cart-main cart-main-custom">
         <div class="cart" id="my-cart">
           <table class="table">
             <thead>
@@ -82,7 +81,7 @@
             </tbody>
           </table>
           <div class="parces text-center">
-            <button class="btn btn-primary text-center">Buy Now</button>
+            <button class="btn btn-primary-custom text-center">Buy Now</button>
           </div>
         </div>
       </div>
