--- a/index.html
+++ b/index.html
@@ -17,11 +17,16 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500&display=swap" rel="stylesheet" />
 </head>
 
+<!-- body starts here -->
+
 <body>
+  <!-- header -->
   <header>
     <h1 class="text-center text-color">Springhawk Store</h1>
   </header>
+  <!-- main section -->
   <main class="main">
+    <!-- search section -->
     <div class="search-field">
       <div class="search-box">
         <input id="input-field" class="" type="text" />
@@ -31,11 +36,14 @@
         </button>
       </div>
     </div>
+    <!-- product and cart section -->
     <div class="row">
+      <!-- product section -->
       <div class="col-md-9 col-lg-9 col-sm-7">
         <div id="all-products" class="">
         </div>
       </div>
+      <!-- cart section -->
       <div class="col-md-3 col-lg-3 col-sm-5 cart-main cart-main-custom">
         <div class="cart" id="my-cart">
           <table class="table">
