hover effect adjusted

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <!-- search section -->
     <div class="search-field">
       <div class="search-box">
-        <input id="input-field" class="" type="text" />
+        <input id="input-field" class="" type="text" placeholder="Search in Springhawk" />
         <button type="button" class="search-button btn-primary-custom" data-toggle="button" aria-pressed="false"
           autocomplete="off" id="search-btn" onclick="loadProducts()">
           Search
