--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <div class="row">
       <!-- product section -->
       <div class="col-md-9 col-lg-9 col-sm-7">
-        <div id="all-products" class="">
+        <div id="all-products">
         </div>
       </div>
       <!-- cart section -->
